# rabbit

./: PhotoCaptureControls.qml  PhotoPreview.qml  declarative-camera.pro  declarative-camera.qml  photorecognize.cpp  photorecognize.h  qmlcamera.cpp
demo/build-playlist-unknown-Debug/: Makefile  playlist
demo/playlist/: main.cpp  playlist.pro
libs/: PocoFoundationd.lib
test/: CMakeLists.txt  main.cpp  voice.sh
test2/untitled/: main.cpp  o.txt  test.txt  untitled.pro
